--- a/02-scripts.backup/MID_mpa3_betadiv.Rmd
+++ b/02-scripts.backup/MID_mpa3_betadiv.Rmd
@@ -129,7 +129,7 @@ plot_pca_names <- function(df, pc1, pc2, metadata_group) {
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
               inner_join(full_metadata %>%
-                         select(Library_ID, Site, Region, Time_period, Sample_or_Control, Periodontal_disease_present, Caries_present, Sex, Age, Tooth_location), by = "Library_ID") %>%
+                         select(Library_ID, Site_code, Region, Time_period, Sample_or_Control, Periodontal_disease_present, Caries_present, Sex, Age, Tooth_location), by = "Library_ID") %>%
               inner_join(., strep_group_info)
     
     metadata_group = df_X[[metadata_group]]
@@ -441,7 +441,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
       top_n(-10, !!arrow_pc)
 
 
-    pca_plot_bi <- ggplot(df_X, aes(x = Pc1, y = Pc2, colour = metadata_group)) +
+    pca_plot_bi <- ggplot(df_X, aes(x = Pc1, y = Pc2, color = metadata_group)) +
       geom_point(size = 2.5, aes(shape = metadata_group) )+
       geom_segment(data = pws_10,
                    aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
@@ -461,7 +461,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
                    size = 2.5, colour = "grey20", label.padding = 0.2) +
       labs(x = paste(xaxis, " - ", exp_var_pc1),
            y = paste(yaxis, " - ", exp_var_pc2)) +
-      scale_colour_manual(values = metadata_group_colors) +
+      scale_color_manual(values = metadata_group_colors) +
       scale_shape_manual(values = metadata_group_shapes) +
       theme_minimal() + theme(text = element_text(size = 16)) +
       theme(text = element_text(size=16)) +
@@ -610,10 +610,10 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
 tune.pca(mpa3_species_decontam_unfilt, logratio = 'CLR')
 
 # perform and plot a PCA to see how the data cluster
-pc1pc2 <- plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site", "Time_period", 3)
+pc1pc2 <- plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site_code", "Time_period", 3)
 pc1pc2
 
-plot_pca(mpa3_species_decontam_unfilt, "PC3", "PC2", "Site", "Time_period", 3)
+plot_pca(mpa3_species_decontam_unfilt, "PC3", "PC2", "Site_code", "Time_period", 3)
 
 
 ```
@@ -641,10 +641,96 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
 tune.pca(mpa3_species_decontam_unfilt, logratio = 'CLR')
 
 # perform and plot a PCA to see how the data cluster
-plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site", "Time_period", 3)
-plot_pca(mpa3_species_decontam_unfilt, "PC3", "PC2", "Site", "Time_period", 3)
+plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site_code", "Time_period", 3)
+plot_pca(mpa3_species_decontam_unfilt, "PC3", "PC2", "Site_code", "Time_period", 3)
 
 ```
+
+```{r no_methanobrevibacter}
+# remove Methanobrevibacter oralis from the species table
+mpa3_species_decontam_unfilt_no_Moralis <- mpa3_species_decontam %>%
+  filter(Species != "Methanobrevibacter oralis") %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts +1) %>%
+  spread(Species,Counts) %>%
+  column_to_rownames("Library_ID")
+
+
+# perform and plot a PCA to see how the data cluster
+nomethano_beta <- plot_pca(mpa3_species_decontam_unfilt_no_Moralis, "PC1", "PC2", "Site_code", "Time_period", 3)
+nomethano_beta
+
+# by average GC content
+nomethano_gc <- plot_pca_cont(mpa3_species_decontam_unfilt_no_Moralis, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
+nomethano_gc
+
+# by average read length
+plot_pca_cont(mpa3_species_decontam_unfilt_no_Moralis, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
+
+# biplot to see strongest loading species
+mpa3_species_decontam_unfilt_no_Moralis.pca <- mixOmics::pca(mpa3_species_decontam_unfilt_no_Moralis, ncomp = 3, logratio = 'CLR')
+plot(mpa3_species_decontam_unfilt_no_Moralis.pca)
+
+# define shapes
+Site_code_shapes <- c(MID = 21, CMB = 21, RAD = 21, KIL = 24, ELR = 24, IVE = 24, JAE = 22, VLC = 22, EXB = 25, LIB = 25)
+
+nomethano_bi <- plot_pca_bi(mpa3_species_decontam_unfilt_no_Moralis.pca, "PC1", "PC2", "Site_code", PC1)
+nomethano_bi
+
+no_methano <- plot_grid(nomethano_beta, nomethano_gc, nomethano_bi,
+          ncol = 1, labels = c("A", "B","C"), rel_widths = c(1), scale = 0.95)
+no_methano
+
+# ggsave("./06-publication/supplemental_figures/SXX5/no_methano.pdf", plot = no_methano,
+#        device = "pdf", scale = 1, width = 6, height = 12, units = c("in"), dpi = 300)
+
+
+```
+
+```{r color_by_Moralis}
+
+mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts +1) %>%
+  spread(Species,Counts) %>%
+  column_to_rownames("Library_ID")
+
+# prepare to run a PCA
+
+mpa3_all_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 2, logratio = 'CLR')
+mpa3_all_pca_values_wMo <- mpa3_all_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID") %>%
+  inner_join(., mpa3_species_decontam_unfilt %>%
+               rownames_to_column("Library_ID") %>%
+               select(Library_ID, `Methanobrevibacter oralis`) %>%
+               mutate(`Methanobrevibacter oralis` = `Methanobrevibacter oralis` - 1))
+
+ggplot(mpa3_all_pca_values_wMo, aes(PC1, PC2, color = `Methanobrevibacter oralis`, shape = Time_period)) +
+  geom_point(size = 2) +
+  # geom_text(aes(label = Library_ID), size = 3) +
+  theme_minimal() +
+  theme(legend.position = "top")
+
+
+ mpa3_species_decontam_unfilt %>%
+   rownames_to_column("Library_ID") %>%
+   pivot_longer(!Library_ID, names_to = "Species", values_to = "Counts") %>%
+   mutate(Counts = Counts - 1) %>%
+   pivot_wider(names_from = "Library_ID", values_from = "Counts") %>%
+   select(Species, CS03) %>%
+   arrange(desc(CS03))
+ 
+ 
+```
+
 
 ```{r biplots_all_species}
 
@@ -664,10 +750,10 @@ plot(mpa3_species_decontam_unfilt.pca)
 Pipenotch_colors = c("#311068","#C83E73")
 Pipenotch_shapes = c(19,17)
 
-mpa3_species_decontam_filtered_nocontrols_biplot_121 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Site", PC1)
+mpa3_species_decontam_filtered_nocontrols_biplot_121 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Site_code", PC1)
 mpa3_species_decontam_filtered_nocontrols_biplot_121
 
-mpa3_species_decontam_filtered_nocontrols_biplot_122 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Site", PC2)
+mpa3_species_decontam_filtered_nocontrols_biplot_122 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Site_code", PC2)
 mpa3_species_decontam_filtered_nocontrols_biplot_122
 
 pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_121$plot_env$pws_10 %>% arrange(desc(PC1)),
@@ -700,10 +786,10 @@ pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_122$plot_env$neg_1
              caption = "PC2 negative loadings")
 
 
-mpa3_species_decontam_filtered_nocontrols_biplot_322 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Site", PC2)
+mpa3_species_decontam_filtered_nocontrols_biplot_322 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Site_code", PC2)
 mpa3_species_decontam_filtered_nocontrols_biplot_322
 
-mpa3_species_decontam_filtered_nocontrols_biplot_323 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Site", PC3)
+mpa3_species_decontam_filtered_nocontrols_biplot_323 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Site_code", PC3)
 mpa3_species_decontam_filtered_nocontrols_biplot_323
 
 pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_323$plot_env$pws_10 %>% arrange(desc(PC3)),
@@ -743,15 +829,15 @@ mpa3_all_pca_values <- mpa3_all_otu.pca$variates$X %>%
   rownames_to_column("Library_ID") %>%
   inner_join(., full_metadata, by = "Library_ID")
 
-# ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Site, shape = Time_period)) +
+# ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Site_code, shape = Time_period)) +
 #   geom_point(size = 2) +
 #   # geom_text(aes(label = Library_ID), size = 3) +
 #   theme_minimal() +
-#   scale_color_manual(values = Site_colors) +
+#   scale_color_manual(values = Site_code_colors) +
 #      theme(legend.position = "top")
 
 plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Time_period","Time_period", 3) 
-plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Site","Time_period", 3) 
+plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Site_code","Time_period", 3) 
 
 # check if the Radliffe samples separate by characteristics of the calculus deposits, Deposit_density, Deposit_location, Deposit_spread
 ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Deposit_spread, shape = Region)) +
@@ -762,7 +848,7 @@ ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Deposit_spread, shape = Region
 
 # perform and plot a PCA to see how the data cluster
 # by sequencing depth 
-mid_seqdepth_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "No_reads_total", "Site", 3, "Total reads into MetaPhlAn3")
+mid_seqdepth_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "No_reads_total", "Site_code", 3, "Total reads into MetaPhlAn3")
 mid_seqdepth_pc12
 # ggsave("~/Desktop/MID_pca_mid_seqdepth_pc12.pdf", plot = mid_seqdepth_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
@@ -795,11 +881,11 @@ pc2_resid <- as.data.frame(model$residuals) %>%
 
 mpa3_all_pca_values %>%
   bind_cols(., pc2_resid) %>%
-ggplot(., aes(PC1, pc2_resid, colour = gc_avg, shape = Site, size = Site)) +
+ggplot(., aes(PC1, pc2_resid, colour = gc_avg, shape = Site_code, size = Site_code)) +
   geom_point() +
-  scale_shape_manual(values = Site_shapes) +
+  scale_shape_manual(values = Site_code_shapes) +
   scale_colour_viridis_c(option = "C") +
-  # scale_color_manual(values = Site_colors) +
+  # scale_color_manual(values = Site_code_colors) +
   scale_size_manual(values = c(2,2,2,3,2,2)) +
    # stat_ellipse() +
   # xlab(paste(exp_var[1], " - ", exp_var_pc1)) +
@@ -818,7 +904,7 @@ ggplot(., aes(PC1, pc2_resid, colour = gc_avg, shape = Site, size = Site)) +
 
 # Extract coordinates from mixOmics object and convert into long table dataframe
 mpa3_all_pca_values_short <- mpa3_all_pca_values %>%
-  select(Library_ID,gc_avg,PC1,PC2,pc2_residuals, Site)
+  select(Library_ID,gc_avg,PC1,PC2,pc2_residuals, Site_code)
 # Extract explained variance
 pca_expl_vars <- paste0(round(mpa3_all_otu.pca$explained_variance * 100, 2), "%")
 # Extract loadings (eigenvectors) from PC analysis
@@ -843,7 +929,7 @@ residuals_pc2_plot_bi <- mpa3_all_pca_values_short %>%
          pc2_residuals = pc2_residuals / corr_lam[2]) %>%
   ggplot(.,
          aes(x = PC1, y = pc2_residuals, colour = gc_avg)) +
-  geom_point(size = 2, aes(shape = Site)) +
+  geom_point(size = 2, aes(shape = Site_code)) +
   geom_segment(data = pc1_pws,
                aes(xend = PC1, yend = PC2),
                x = 0, y = 0, colour = "black", size = 0.5,
@@ -861,7 +947,7 @@ residuals_pc2_plot_bi <- mpa3_all_pca_values_short %>%
   labs(x = paste("PC1 -", pca_expl_vars[1]),
        y = paste("PC2 -", pca_expl_vars[2])) +
   scale_colour_viridis(option = "C") +
-  # scale_shape_manual(values = Site_colors) +
+  # scale_shape_manual(values = Site_code_colors) +
   theme_minimal() + theme(text = element_text(size = 14))
 residuals_pc2_plot_bi
 
