--- a/02-scripts.backup/MID_tax_alphadiv.Rmd
+++ b/02-scripts.backup/MID_tax_alphadiv.Rmd
@@ -145,7 +145,7 @@ all_species_decontam.os <- presabs_table %>%
   rownames_to_column("Library_ID") %>%
   filter(!str_detect(Library_ID, "EXB|LIB")) 
 
-plot_box_whisker(all_species_decontam.os, "Observed_species", "Site", "Site")
+plot_box_whisker(all_species_decontam.os, "Observed_species", "Site_code", "Site_code")
 plot_box_whisker(all_species_decontam.os, "Observed_species", "Region", "Region")
 
 # os_plot <-all_species_decontam.os %>%
@@ -156,7 +156,7 @@ plot_box_whisker(all_species_decontam.os, "Observed_species", "Region", "Region"
 # filter(!str_detect(Library_ID, "EXB|LIB")) %>%
 #   ggplot(., aes(x = Site, y = Observed_species, fill = Site)) +
 #                          geom_boxplot() +
-#                          scale_fill_manual(values = Site_colors) +
+#                          scale_fill_manual(values = Site_code_colors) +
 #                          theme_minimal(base_size = 18) +
 #                          #scale_y_continuous(trans='log10') +
 #                          #scale_y_continuous(trans='pseudo_log') +
@@ -172,12 +172,12 @@ os_plot <- all_species_decontam.os %>%
   ggplot(., aes(x = Site, y = Observed_species, fill = Site)) +
   geom_boxplot(color = "grey30") +
   geom_point(alpha = 0.5, color = "grey30", position = position_jitterdodge()) +
-  scale_fill_manual(values = Site_colors) +
+  scale_fill_manual(values = Site_code_colors) +
   theme_minimal(base_size = 18) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1),
         text = element_text(size=20)) +
   ylab("Observed species") +
-  xlab("Site")
+  xlab("Site_code")
 os_plot
 
 
@@ -206,7 +206,7 @@ all_species_decontam_filtered.os <- presabs_table_f %>%
   select(Observed_species) %>%
   rownames_to_column("Library_ID")  
 
-plot_box_whisker(all_species_decontam_filtered.os, "Observed_species", "Site", "Site")
+plot_box_whisker(all_species_decontam_filtered.os, "Observed_species", "Site_code", "Site_code")
 plot_box_whisker(all_species_decontam_filtered.os, "Observed_species", "Time_period", "Region")
 plot_box_whisker(all_species_decontam_filtered.os, "Observed_species", "Region", "Time_period")
 plot_box_whisker(all_species_decontam_filtered.os, "Observed_species", "Time_period", "Time_period")
@@ -217,12 +217,12 @@ filtered_os <- all_species_decontam_filtered.os %>%
   ggplot(., aes(x = Site, y = Observed_species, fill = Site)) +
   geom_boxplot(color = "grey30") +
   geom_point(alpha = 0.5, color = "grey30", position = position_jitterdodge()) +
-  scale_fill_manual(values = Site_colors) +
+  scale_fill_manual(values = Site_code_colors) +
   theme_minimal(base_size = 18) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1),
         text = element_text(size=20)) +
   ylab("Observed species") +
-  xlab("Site")
+  xlab("Site_code")
 filtered_os
 
 # ggsave("~/Desktop/MID_os_filtered_plot_site.pdf", plot = filtered_os, device = "pdf",
@@ -249,7 +249,7 @@ names(all_species_decontam.shannon)[1] <- "Shannon_index"
 all_species_decontam.shannon <- all_species_decontam.shannon %>%
   rownames_to_column("Library_ID")
 
-plot_box_whisker(all_species_decontam.shannon, "Shannon_index", "Site", "Site")
+plot_box_whisker(all_species_decontam.shannon, "Shannon_index", "Site_code", "Site_code")
 plot_box_whisker(all_species_decontam.shannon, "Shannon_index", "Region", "Region")
 
 shannon_sp_plot <-all_species_decontam.shannon %>%
@@ -258,7 +258,7 @@ shannon_sp_plot <-all_species_decontam.shannon %>%
                       Periodontal_disease_present, Caries_present, Sex, Age), by = "Library_ID") %>%
   ggplot(., aes(x = Site, y = Shannon_index, fill = Site)) +
                          geom_boxplot() +
-                         scale_fill_manual(values = Site_colors) +
+                         scale_fill_manual(values = Site_code_colors) +
                          theme_minimal(base_size = 18) +
                          #scale_y_continuous(trans='log10') +
                          #scale_y_continuous(trans='pseudo_log') +
@@ -288,7 +288,7 @@ names(all_species_decontam_filtered.shannon)[1] <- "Shannon_index"
 all_species_decontam_filtered.shannon <- all_species_decontam_filtered.shannon %>%
   rownames_to_column("Library_ID")
 
-plot_box_whisker(all_species_decontam_filtered.shannon, "Shannon_index", "Site", "Site")
+plot_box_whisker(all_species_decontam_filtered.shannon, "Shannon_index", "Site_code", "Site_code")
 plot_box_whisker(all_species_decontam_filtered.shannon, "Shannon_index", "Time_period", "Region")
 plot_box_whisker(all_species_decontam_filtered.shannon, "Shannon_index", "Region", "Time_period")
 plot_box_whisker(all_species_decontam_filtered.shannon, "Shannon_index", "Time_period", "Time_period")
@@ -313,7 +313,7 @@ names(evenness.species)[1] <- "Pileou_evenness"
 evenness.species <- evenness.species %>%
   rownames_to_column("Library_ID")
 
-plot_box_whisker(evenness.species, "Pileou_evenness", "Site", "Site")
+plot_box_whisker(evenness.species, "Pileou_evenness", "Site_code", "Site_code")
 plot_box_whisker(evenness.species, "Pileou_evenness", "Time_period", "Region")
 
 pe_sp_plot <-evenness.species %>%
@@ -322,7 +322,7 @@ pe_sp_plot <-evenness.species %>%
                       Periodontal_disease_present, Caries_present, Sex, Age), by = "Library_ID") %>%
   ggplot(., aes(x = Site, y = Pileou_evenness, fill = Site)) +
                          geom_boxplot() +
-                         scale_fill_manual(values = Site_colors) +
+                         scale_fill_manual(values = Site_code_colors) +
                          theme_minimal(base_size = 18) +
                          #scale_y_continuous(trans='log10') +
                          #scale_y_continuous(trans='pseudo_log') +
@@ -341,7 +341,7 @@ names(evenness.species_filtered)[1] <- "Pileou_evenness"
 evenness.species_filtered <- evenness.species_filtered %>%
   rownames_to_column("Library_ID")
 
-plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Site", "Site")
+plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Site_code", "Site_code")
 plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Time_period", "Region")
 plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Region", "Time_period")
 plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Time_period", "Time_period")
@@ -407,11 +407,11 @@ all_species_decontam_filtered.alpha <- all_species_decontam_filtered.alpha %>%
   rownames_to_column("Library_ID"), by = "Library_ID")
 
 # now plot the observed species
-os_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Observed_species", "Site", "Site")
+os_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Observed_species", "Site_code", "Site_code")
 os_site
-shannon_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Shannon_index", "Site", "Site")
+shannon_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Shannon_index", "Site_code", "Site_code")
 shannon_site
-pe_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Pileou_evenness", "Site", "Site")
+pe_site <- plot_box_whisker(all_species_decontam_filtered.alpha, "Pileou_evenness", "Site_code", "Site_code")
 pe_site
 
 # ggsave("./06-publication/supplemental_figures/SXX6/panel_parts/Figure_SXX6_os_market_split.pdf", plot = os_market_split, device = "pdf",
@@ -950,7 +950,7 @@ mid_pipe_order <- metadata_nofactors %>%
 
 ```{r heatmap_colors, eval = F}
 
-Site_colors %>%
+Site_code_colors %>%
                as_data_frame(.) %>%
                rename(Color = value) %>%
                mutate(Site = c("Middenbeemster", "CMB", "Radcliffe", "Kilteasheen",
@@ -1474,11 +1474,11 @@ all_species_decontam_top50_each_clr_long <- all_species_decontam_top50_each_clr 
   gather("Library_ID","CLR", 2:ncol(.)) %>%
   inner_join(., full_metadata %>%
                select(Library_ID, Site), by = "Library_ID") %>%
-  inner_join(., Site_colors %>%
+  inner_join(., Site_code_colors %>%
                as_data_frame(.) %>%
                rename(Color = value) %>%
                mutate(Site = c("Middenbeemster", "CMB", "Radcliffe", "Kilteasheen",
-                                   "ELR", "IVE","Jaen","VLC","Extraction_blank","Library_blank")), by = "Site") %>%
+                                   "ELR", "IVE","Jaen","VLC","Extraction_blank","Library_blank")), by = "Site_code") %>%
   mutate(Library_ID = fct_relevel(Library_ID, all_species_decontam_top50_each_clr_smp_order)) %>%
   arrange(Library_ID)
 
@@ -1519,11 +1519,11 @@ all_species_decontam_top50_each_clr_long <- all_species_decontam_top50_each_clr 
   gather("Library_ID","CLR", 2:ncol(.)) %>%
   inner_join(., full_metadata %>%
                select(Library_ID, Site), by = "Library_ID") %>%
-  inner_join(., Site_colors %>%
+  inner_join(., Site_code_colors %>%
                as_data_frame(.) %>%
                rename(Color = value) %>%
                mutate(Site = c("Middenbeemster", "CMB", "Radcliffe", "Kilteasheen",
-                                   "ELR", "IVE","Jaen","VLC","Extraction_blank","Library_blank")), by = "Site") %>%
+                                   "ELR", "IVE","Jaen","VLC","Extraction_blank","Library_blank")), by = "Site_code") %>%
   mutate(Library_ID = fct_relevel(Library_ID, site_order)) %>%
   arrange(Library_ID)
 
@@ -1572,6 +1572,156 @@ full_metadata %>%
     theme(axis.text = element_text(size = 10)) +
     xlab("Max. periodontitis score") +
     ylab("Age group")
+
+```
+
+```{r with_plaque}
+
+# read in the plaque samples from CMC
+plaque <- fread("~/archgen/microbiome_calculus/Cameroon_plaque/05-results.backup/MALT_all_data_combined_species_names.tsv") %>%
+  rename(Species = `#Datasets`) %>%
+  select(matches("Species|SRS"))
+
+colnames(plaque) <- gsub(".unmapped","", colnames(plaque))
+
+all_species_decontam_prev_pq <- all_species_decontam_prev %>%
+  left_join(., plaque, by = "Species") %>%
+  pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+  mutate(Counts = replace_na(Counts, 0)) %>%
+  pivot_wider(names_from = "Library_ID", values_from = "Counts")
+
+# select the top 50 most abundant species for all samples (CMC, JAE, HMP)
+all_species_decontam_top50_all <- all_species_decontam_prev_pq %>%
+  select(-one_of(outliers)) %>%
+  select(-one_of(poor_samples)) %>%
+  select(-matches("CSN|CSL|CSD|CSS|EXB|LIB")) %>%
+  adorn_totals(where = "col", name = "Sum_species.decontam") %>%
+  mutate(Percent = Sum_species.decontam/sum(Sum_species.decontam)*100) %>%
+  top_n(50, Percent) %>%
+  select(-one_of("Sum_species.decontam","Percent")) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts + 1) %>%
+  spread(Species,Counts) %>%
+  column_to_rownames("Library_ID")
+
+# CLR-transform the matrix for plotting the heatmap
+all_species_decontam_top50_all_clr <- clr(all_species_decontam_top50_all)
+all_species_decontam_top50_all_clr <- as.matrix(all_species_decontam_top50_all_clr)
+
+# orient the matrix with correct rows/columns to run the distance calculation for the species, not the samples (columns are Library_ID, rows are Species)
+all_species_decontam_top50_all_clr_sp <- all_species_decontam_top50_all_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  gather("Species","Counts",2:ncol(.)) %>%
+  spread(Library_ID,Counts)
+
+#add the rownames back
+rownames(all_species_decontam_top50_all_clr_sp) <- all_species_decontam_top50_all_clr_sp$Species
+all_species_decontam_top50_all_clr_sp <- all_species_decontam_top50_all_clr_sp %>% select(-Species)
+
+# perform a distance calculation for hierarchical clustering for the species ordering
+all_species_decontam_top50_all_clr_dist <- vegdist(all_species_decontam_top50_all_clr_sp, method = "euclidian")
+# cluster the data with hclust
+all_species_decontam_top50_all_clr_dist_hr <- hclust(all_species_decontam_top50_all_clr_dist)
+# all_species_decontam_top50_all_clr_dist_hr$order gives the dendrogram order from the bottom to the top, but using the row numbers not the row names
+# pull this order out and store as a vector to make the order a factor in the next step for plotting
+sp_all_order <- all_species_decontam_top50_all_clr_dist_hr$order %>%
+  as.character.numeric_version(.) %>%
+  str_trim(.)
+
+# use the dendrogram order to pull out the species in the correct order for the heatmap
+all_species_decontam_top50_all_clr_order <- all_species_decontam_top50_all_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  gather("Species","CLR",2:ncol(.)) %>%
+  spread(Library_ID,CLR) %>%
+  mutate(SpOrder = as.character(seq(1,50))) %>%
+  select(Species, SpOrder, everything()) %>%
+  mutate(SpOrder = fct_relevel(SpOrder, sp_all_order)) %>%
+  arrange(SpOrder) %>%
+  pull(Species)
+
+# make the species a factor so they're in the correct order for the heatmap using the vector from the step above
+all_species_decontam_top50_all_clr_long <- all_species_decontam_top50_all_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  gather("Species","CLR",2:ncol(.)) %>%
+  spread(Library_ID,CLR) %>%
+  mutate(Species = fct_relevel(Species, all_species_decontam_top50_all_clr_order)) %>%
+  arrange(Species) %>%
+  gather("Library_ID","CLR", 2:ncol(.))
+
+# now cluster by sample
+# convert the matrix to a data.frame
+all_species_decontam_top50_all_clr_smp <- all_species_decontam_top50_all_clr %>%
+  as.data.frame()
+
+# perform a distance calculation for hierarchical clustering for the species ordering
+all_species_decontam_top50_all_clr_smp_dist <- vegdist(all_species_decontam_top50_all_clr_smp, method = "euclidian")
+# cluster the data with hclust
+all_species_decontam_top50_all_clr_smp_dist_hr <- hclust(all_species_decontam_top50_all_clr_smp_dist)
+# all_species_decontam_top50_all_clr_dist_hr$order gives the dendrogram order from the bottom to the top, but using the row numbers not the row names
+# pull this order out and store as a vector to make the order a factor in the next step for plotting
+smp_all_order <- all_species_decontam_top50_all_clr_smp_dist_hr$order %>%
+  as.character.numeric_version(.) %>%
+  str_trim(.)
+
+# use the dendrogram order to pull out the species in the correct order for the heatmap
+all_species_decontam_top50_all_clr_smp_order <- all_species_decontam_top50_all_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  gather("Species","CLR",2:ncol(.)) %>%
+  spread(Species,CLR) %>%
+  mutate(SmpOrder = as.character(seq(1,189))) %>%  
+  select(Library_ID, SmpOrder, everything()) %>%
+  mutate(SmpOrder = fct_relevel(SmpOrder, smp_all_order)) %>%
+  arrange(SmpOrder) %>%
+  pull(Library_ID)
+
+
+# Plot the heatmap with samples ordered by time period
+
+site_order <- all_species_decontam_top50_all %>%
+  rownames_to_column("Library_ID") %>%
+  select(Library_ID) %>%
+  distinct() %>%
+  left_join(., metadata_nofactors %>%
+              select(Library_ID, Site_code)) %>%
+  mutate(Site_code = ifelse(str_detect(Library_ID, "SRS"),"SRS",Site_code)) %>%
+  mutate(Site_code = ifelse(str_detect(Library_ID, "JAE"),"JAE",Site_code)) %>%
+  mutate(Site_code = ifelse(str_detect(Library_ID, "VLC"),"VLC",Site_code)) %>%
+  mutate(Site_code = fct_relevel(Site_code, "ELR","IVE","KIL","MID","CMB","RAD","JAE","VLC","SRS")) %>%
+  arrange(Site_code) %>%
+  pull(Library_ID)
+
+
+# make the Library_IDs a factor so they're in the correct order for the heatmap 
+all_species_decontam_top50_all_clr_long <- all_species_decontam_top50_all_clr %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  gather("Species","CLR",2:ncol(.)) %>%
+  spread(Library_ID,CLR) %>%
+  mutate(Species = fct_relevel(Species, all_species_decontam_top50_all_clr_order)) %>%
+  arrange(Species) %>%
+  gather("Library_ID","CLR", 2:ncol(.)) %>%
+  mutate(Library_ID = fct_relevel(Library_ID, site_order)) %>%
+  arrange(Library_ID)
+
+# make a heatmap with ggplot
+heatmap_base <- ggplot(all_species_decontam_top50_all_clr_long, aes(Library_ID, Species, fill = CLR)) +
+  geom_tile() +
+  scale_fill_viridis_c(option = "A") +
+  theme_minimal(base_size = 12) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 0.95),
+        plot.margin = margin(0, 0, 0, 0, "pt"),
+        axis.title.y = element_blank(),
+        legend.position = "left")
+
+heatmap_base
+
+
+ggsave("~/Desktop/top50species_each_heatmap.pdf", plot = heatmap_base, device = "pdf",
+       scale = 1, width = 13, height = 7, units = c("in"), dpi = 300)
 
 ```
 
